fix: 🐛 wrong color of assistant icon in chatting panel

--- a/src/css/chatui.module.css
+++ b/src/css/chatui.module.css
@@ -117,7 +117,7 @@
 }
 
 .messageContainer svg path {
-  fill: unset !important;
+  fill: none !important;
 }
 
 .userMessage {
